--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: python
 python:
 - 3.6
-- 3.5
-- 3.4
-install: pip install -U tox-travis
-script: tox
+install: python setup.py install
+script: python setup.py test
 deploy:
   provider: pypi
   distributions: sdist bdist_wheel
